<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="151dp"
        android:text="@string/textView12"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="360dp"
        android:layout_height="164dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="354dp"
        android:layout_height="153dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:srcCompat="@android:drawable/ic_menu_report_image"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="351dp"
        android:layout_height="24dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="33dp"
        android:text="@string/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="345dp"
        android:layout_height="22dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="133dp"
        android:text="@string/textView14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>